[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/Map2.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tileset/open_door.png" type="Texture" id=3]
[ext_resource path="res://src/Doors/Door_Level2_Room.gd" type="Script" id=4]
[ext_resource path="res://assets/tileset/switch_off.png" type="Texture" id=5]
[ext_resource path="res://src/Buttons/Button.gd" type="Script" id=6]
[ext_resource path="res://assets/tileset/big_red_doors.png" type="Texture" id=7]
[ext_resource path="res://src/Doors/Door_Level2_Exit.gd" type="Script" id=8]
[ext_resource path="res://src/Portal/Portal.gd" type="Script" id=9]
[ext_resource path="res://assets/portals/blue_portal.png" type="Texture" id=10]
[ext_resource path="res://src/Portal/Portal2.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.8553, 15.9854 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.8829, 15.964 )

[sub_resource type="CircleShape2D" id=5]
radius = 25.9838

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 56.2373, 128.698 )

[sub_resource type="CircleShape2D" id=1]
radius = 46.0145

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.66938
height = 3.87718

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 157, 300 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 157, 0, 157, 300 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 35.2874
height = 67.8496

[sub_resource type="CapsuleShape2D" id=11]
radius = 39.5204
height = 58.0684

[node name="Level2" type="Node"]

[node name="map" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 766.584, 401.674 )

[node name="Doors" type="Node" parent="."]

[node name="Room" type="Node" parent="Doors"]

[node name="Door" type="StaticBody2D" parent="Doors/Room"]
position = Vector2( 1140.73, 768.677 )
rotation = 1.5708
scale = Vector2( 2, 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Doors/Room/Door"]
position = Vector2( -0.249878, -21.625 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Room/Door"]
position = Vector2( -24.622, -21.5432 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Doors/Room/Door"]
position = Vector2( 31.3359, -21.5618 )
shape = SubResource( 3 )

[node name="EnterCollision" type="CollisionShape2D" parent="Doors/Room/Door"]
position = Vector2( 0.704069, -21.3335 )
shape = SubResource( 4 )

[node name="Exit" type="Node" parent="Doors"]

[node name="Door" type="StaticBody2D" parent="Doors/Exit"]
position = Vector2( 79.9243, 768.258 )
rotation = -1.5708
scale = Vector2( 4, 4 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Doors/Exit/Door"]
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="Doors/Exit/Door" groups=[
"ExitDoor",
]]

[node name="EnterCollision" type="CollisionShape2D" parent="Doors/Exit/Door/Area2D"]
position = Vector2( -0.349167, 12.6408 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Exit/Door"]
position = Vector2( 0.0110321, -1.85605 )
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 6 )

[node name="Label" type="Label" parent="Doors/Exit"]
visible = false
margin_left = 42.4717
margin_top = 643.915
margin_right = 215.472
margin_bottom = 674.915
text = "Press E to  activate"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node" parent="."]

[node name="Room" type="Node" parent="Buttons"]

[node name="Button" type="Sprite" parent="Buttons/Room" groups=[
"Buttons",
]]
position = Vector2( 1355.3, 764.899 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="Buttons/Room/Button" groups=[
"Buttons",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/Room/Button/Area2D"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Buttons/Room/Button"]
visible = false
margin_left = -60.5203
margin_top = -33.2321
margin_right = 60.4797
margin_bottom = -19.2321
text = "Press E to  activate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitBox" type="StaticBody2D" parent="Buttons/Room/Button"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/Room/Button/HitBox"]
position = Vector2( 0.198608, 7.51351 )
shape = SubResource( 2 )

[node name="Portals" type="Node" parent="Buttons"]

[node name="Button" type="Sprite" parent="Buttons/Portals" groups=[
"Buttons",
]]
position = Vector2( 221.653, 1313.47 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="Buttons/Portals/Button" groups=[
"Buttons",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/Portals/Button/Area2D"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Buttons/Portals/Button"]
visible = false
margin_left = -60.5203
margin_top = -33.2321
margin_right = 60.4797
margin_bottom = -19.2321
text = "Press E to  activate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitBox" type="StaticBody2D" parent="Buttons/Portals/Button"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/Portals/Button/HitBox"]
position = Vector2( 0.198608, 7.51351 )
shape = SubResource( 2 )

[node name="Portal" type="Area2D" parent="."]
visible = false
position = Vector2( 298.224, 221.034 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Portal"]
position = Vector2( -76.0159, -15.071 )
frames = SubResource( 10 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal"]
position = Vector2( -75.3523, -12.9686 )
shape = SubResource( 7 )
disabled = true

[node name="Portal2" type="Area2D" parent="."]
visible = false
position = Vector2( 796.805, 665.085 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Portal2"]
position = Vector2( 88.014, -5.38873 )
frames = SubResource( 10 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal2"]
position = Vector2( 88.0142, -4.19116 )
shape = SubResource( 11 )
disabled = true
[connection signal="body_shape_entered" from="Portal" to="Portal" method="_on_Portal_body_shape_entered"]
[connection signal="body_shape_entered" from="Portal2" to="Portal" method="_on_Portal2_body_shape_entered"]
